[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/bc_0.png" type="Texture" id=2]
[ext_resource path="res://scripts/AnimatedTank.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.8, 15.8 )

[sub_resource type="Animation" id=6]
resource_name = "spawn"
length = 6.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 258, 259, 260, 261, 260, 259, 258, 259, 260, 261, 260, 259 ]
}

[sub_resource type="Animation" id=7]
resource_name = "explode"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 70, 71 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15.8, 15.8 )

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 1 )

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 18
hframes = 16
frame = 8
script = ExtResource( 3 )
tank_type = 1
walk_interval = 0.1

[node name="spawnSprite" type="Sprite" parent="."]
editor/display_folded = true
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 18
hframes = 16
frame = 258

[node name="anim" type="AnimationPlayer" parent="spawnSprite"]
playback_speed = 5.0
anims/spawn = SubResource( 6 )

[node name="explode" type="Sprite" parent="."]
editor/display_folded = true
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 9
hframes = 8
frame = 71

[node name="anim" type="AnimationPlayer" parent="explode"]
playback_speed = 3.0
anims/explode = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 31

[node name="coll" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="bc_0" type="Sprite" parent="."]
visible = false
position = Vector2( -81, 63 )
texture = ExtResource( 2 )
[connection signal="animation_finished" from="spawnSprite/anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="explode/anim" to="." method="_on_explode_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
